--- a/config/config_dominik.json
+++ b/config/config_dominik.json
@@ -1,7 +1,5 @@
 {  
 "tags": ["#Pro", "#Vor","#pro", "#vor"],
 "scopes": "https://www.googleapis.com/auth/calendar",
-"calendar_id": "dominikballentin@gmail.com",
-"excel_load_path": "/app/Muster_Honorarrechnung-Lehrkräfte_pytest.xlsx"
-
+"calendar_id": "dominikballentin@gmail.com"
 }
