--- a/.env.prod
+++ b/.env.prod
@@ -2,7 +2,10 @@
 
 CONFIG_PATH=/app/config/config_dominik.json
 SERVICE_ACCOUNT_FILE=/app/config/credentials.json
-EXCEL_LOAD_PATH=/app/data/Muster_Honorarrechnung.xlsx
+#EXCEL_LOAD_PATH=/app/data/Muster_Honorarrechnung.xlsx
+EXCEL_LOAD_PATH=/Input_data/Muster_Honorarrechnung.xlsx
+OUTPUT_DIR=/output
+
 OUTPUT_DIR=/app/output
 
 ENVIRONMENT=prod
